force-app/main/default/objects/Certified_volume__c/Certified_volume__c.object-meta.xml
<CustomObject>
    <label>Certified volume</label>
    <nameField>
        <displayFormat>CV-{0000}</displayFormat>
        <label>Certified volume Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certified Volumes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>