force-app/main/default/objects/Certified_volume__c/fields/IS_CSPO_Projected_Tonnage_Total__c.field-meta.xml
<CustomField>
    <fullName>IS_CSPO_Projected_Tonnage_Total__c</fullName>
    <label>IS - CSPO Projected Tonnage Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>