force-app/main/default/objects/Certified_volume__c/fields/IS_FFB_Projected_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>IS_FFB_Projected_Tonnage__c</fullName>
    <label>IS- FFB Projected Tonnage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>