force-app/main/default/objects/Certified_volume__c/fields/Opportunity_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Certificate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Certificate</label>
    <referenceTo>Opportunity_Certificate__c</referenceTo>
    <relationshipLabel>Certified Volumes</relationshipLabel>
    <relationshipName>Certified_Volumes</relationshipName>
    <type>Lookup</type>
</CustomField>