force-app/main/default/objects/Certified_volume__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligibility</fullName>
            </value>
            <value>
                <fullName>MS A</fullName>
            </value>
            <value>
                <fullName>MS B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>